--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,21 @@
-﻿1.2.2 d
+﻿1.3
+* New: Added new events at high levels of depravity in several private services (events on the 4th star) 
+* New: Added quest learning Genie
+* New: Rewritten module working with displaying characters
+* New: Written module working with objects and collections of objects
+* New: Developed a mechanism for the purchase of items: up to 3 items at a time, quick delivery
+* New: Number of sacred scrolls increased to 45
+* New: When reading books reduced CLICKS(Fuck you cookieclicker)
+* New: Added button "Continue reading"
+* New: Introduced a new book that improve reading skills
+* New: Dashboard indicators introduced depravity and mood Hermione
+* New: <enu cheats added a new item "Hermione's not mad at you" (approx. most console cheats, described for older versions stopped working)
+* Fix: Corrected a software mechanism of counting the number of starts event
+* Fix: Updated the mechanism of counting stars
+* Fix: Found and fixed two dozen different kinds of bugs, some inherited from old English version
+* Add:Some bags.kek
+
+1.2.2 d
 * New: Ability to jump from the beginning of the game immediately on the 5th day (the morning after the duel)
 * New: Added code that allows you to do without modifying the core RenPy (in the previous version of two core file has been modified)
 * Fix: crash when some levels of depravity: by putting on a skirt, receiving training log and. etc.
